--- a/src/common/stylus/index.styl
+++ b/src/common/stylus/index.styl
@@ -18,7 +18,7 @@ html, body {
   font-size 16px
   color $font-color
   background-color: $background-color-d;
-  font-family 'Josefin Sans','PingFang SC','Microsoft JhengHei',Helvetica,Arial,sans-serif
+  font-family 'PingFang SC','Microsoft JhengHei',Helvetica,Arial,sans-serif
 }
 a:hover
   color $theme-color
